--- a/TexDBook/src/html/index.html
+++ b/TexDBook/src/html/index.html
@@ -6,18 +6,28 @@
   </head>
   <body>
     <h1>Welcome to TexDBook</h1>
-    
-    <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-    <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/react-router/4.2.0/react-router.min.js"></script>
-    <script crossorigin
-            src="https://cdnjs.cloudflare.com/ajax/libs/react-router-dom/4.2.2/react-router-dom.min.js"></script>
-    
-    <!--<script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>-->
-    <!--<script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>-->
-    <!--<script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/react-router/4.2.0/react-router.js"></script>-->
-    <!--<script crossorigin-->
-            <!--src="https://cdnjs.cloudflare.com/ajax/libs/react-router-dom/4.2.2/react-router-dom.js"></script>-->
-  
+
+  <script>
+    const TexDBook = window.TexDBook = {};
+    TexDBook.isLoggedIn = !!{{ int(current_user.is_authenticated) }};
+  </script>
+
+    {% if False %}
+      {% if debug %}
+        <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+        <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+        <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/react-router/4.2.0/react-router.js"></script>
+        <script crossorigin
+                src="https://cdnjs.cloudflare.com/ajax/libs/react-router-dom/4.2.2/react-router-dom.js"></script>
+      {% else %}
+        <script crossorigin
+                src="https://cdnjs.cloudflare.com/ajax/libs/react-router/4.2.0/react-router.min.js"></script>
+        <script crossorigin
+                src="https://cdnjs.cloudflare.com/ajax/libs/react-router-dom/4.2.2/react-router-dom.min.js"></script>
+        <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
+        <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+      {% endif %}
+    {% endif %}
+
   </body>
 </html>
