--- a/TexDBook/src/python/base.html
+++ b/TexDBook/src/python/base.html
@@ -10,20 +10,30 @@
 
   <body>
     {% block navbar %}
-    <nav class="navbar navbar-inverse bg-inverse" style="background-color:slategrey;">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand nav_link" href="/">TexDBook</a>
-        </div>
-      </div>
-    </nav>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="home.html">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="login.html">Login</a>
+      </li>
+    </ul>
+      <span class="navbar-text">
+        <a href="account.html">My Account</a>
+      </span>
+ 
+  </div>
+</nav>
     {% endblock %}
 
-    <form action="">
-      Username: <input type="text" name="username"><br>
-      Password:  <input type="password" name="password"><br>
-      <input type="submit" value="Submit">
-    </form>
+ 
     
     <div class="container">
       {% block content %}
