Fixed the login mechanism w.r.t to cookies.     Needed to set {credentials: "include"} in Fetch call to send all cookies.     Needed to fix User.load() to set User.is_authenticated = True.     Needed to set login_manager.user_callback = User.load manually         instead of using decorator, since class methods messed it up.
Wrote bindProps to bind props to a ComponentClass,
like how Function.bind works with functions.
It does this by wrapping the ComponentClass in a new ComponentClass
and then copying all the properties of the original to the wrapper.

--- a/TexDBook/src/html/index.html
+++ b/TexDBook/src/html/index.html
@@ -8,10 +8,11 @@
   </head>
   <body>
     <script>
-        const TexDBook = window.TexDBook = {};
-        TexDBook.isLoggedIn = {
-            isLoggedIn: !!{{ int(current_user.is_authenticated) }},
-        }
+        window.TexDBook = {
+            isLoggedIn: {
+                isLoggedIn: !!{{ int(current_user.is_authenticated) }},
+            },
+        };
     </script>
     
     {% if False %}
