Using SqliteDatabase instead of APSWDatabase.

--- a/TexDBook/src/html/index.html
+++ b/TexDBook/src/html/index.html
@@ -12,6 +12,7 @@
             isLoggedIn: {
                 isLoggedIn: !!{{ int(current_user.is_authenticated) }},
             },
+            csrfToken: "{{ csrf_token }}",
         };
     </script>
     
